Also lint when pushing to main

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,9 +2,9 @@ name: Lint
 
 on:
   push:
-    branches: [ live ]
+    branches: [ main, live ]
   pull_request:
-    branches: [ live ]
+    branches: [ main, live ]
 
 jobs:
   build:
