--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -30,6 +30,11 @@ jobs:
           FIX_HTML_PRETTIER: true
           FIX_CSS_PRETTIER: true
           FIX_JAVASCRIPT_PRETTIER: true
+          VALIDATE_CHECKOV: false
+          VALIDATE_HTML: false
+          VALIDATE_CSS: false
+          VALIDATE_VALIDATE_JAVASCRIPT_STANDARD: false
+
 
       - name: Commit and push linting fixes
         if: >
