--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -30,14 +30,15 @@ jobs:
           FIX_HTML_PRETTIER: true
           FIX_CSS_PRETTIER: true
           FIX_JAVASCRIPT_PRETTIER: true
-          FIX_MARKDOWN: true
+          FIX_MARKDOWN_PRETTIER: true
           FIX_YAML_PRETTIER: true
           VALIDATE_CHECKOV: false
           VALIDATE_HTML: false
           VALIDATE_CSS: false
-          VALIDATE_VALIDATE_JAVASCRIPT_STANDARD: false
+          VALIDATE_JAVASCRIPT_STANDARD: false
           VALIDATE_JAVASCRIPT_ES: false
           VALIDATE_JSCPD: false
+          FIX_MARKDOWN: false
 
 
       - name: Commit and push linting fixes
