--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,48 +6,51 @@ on:
   pull_request:
     branches: [ main, live ]
 
+permissions:
+  contents: read
+
 jobs:
-  build:
-    name: Lint
-    runs-on: ubuntu-latest
+  lint:
+    fix-lint-issues:
+      permissions:
+        # To write linting fixes
+        contents: write
+        # To write Super-linter status checks
+        statuses: write
+      runs-on: ubuntu-latest
+      
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v4
+          with:
+            fetch-depth: 0
 
-    permissions:
-      contents: read
-      packages: read
-      statuses: write
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Super-linter
-        uses: super-linter/super-linter/slim@v7.3.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          LINTER_RULES_PATH: linters
-          FIX_HTML_PRETTIER: true
-          FIX_CSS_PRETTIER: true
-          FIX_JAVASCRIPT_PRETTIER: true
-          FIX_MARKDOWN_PRETTIER: true
-          FIX_YAML_PRETTIER: true
-          VALIDATE_CHECKOV: false
-          VALIDATE_HTML: false
-          VALIDATE_CSS: false
-          VALIDATE_JAVASCRIPT_STANDARD: false
-          VALIDATE_JAVASCRIPT_ES: false
-          VALIDATE_JSCPD: false
-          FIX_MARKDOWN: false
+        - name: Super-linter
+          uses: super-linter/super-linter/slim@v7.3.0
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            LINTER_RULES_PATH: linters
+            FIX_HTML_PRETTIER: true
+            FIX_CSS_PRETTIER: true
+            FIX_JAVASCRIPT_PRETTIER: true
+            FIX_MARKDOWN_PRETTIER: true
+            FIX_YAML_PRETTIER: true
+            VALIDATE_CHECKOV: false
+            VALIDATE_HTML: false
+            VALIDATE_CSS: false
+            VALIDATE_JAVASCRIPT_STANDARD: false
+            VALIDATE_JAVASCRIPT_ES: false
+            VALIDATE_JSCPD: false
+            FIX_MARKDOWN: false
 
 
-      - name: Commit and push linting fixes
-        if: >
-          github.event_name == 'pull_request' &&
-          github.ref_name != github.event.repository.default_branch
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          branch: ${{ github.event.pull_request.head.ref || github.head_ref || github.ref }}
-          commit_message: "chore: fix linting issues"
-          commit_user_name: super-linter
-          commit_user_email: super-linter@super-linter.dev
+        - name: Commit and push linting fixes
+          if: >
+            github.event_name == 'pull_request' &&
+            github.ref_name != github.event.repository.default_branch
+          uses: stefanzweifel/git-auto-commit-action@v5
+          with:
+            branch: ${{ github.event.pull_request.head.ref || github.head_ref || github.ref }}
+            commit_message: "chore: fix linting issues"
+            commit_user_name: super-linter
+            commit_user_email: super-linter@super-linter.dev
