--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -33,7 +33,8 @@ jobs:
           VALIDATE_JAVASCRIPT_STANDARD: false
           VALIDATE_JAVASCRIPT_ES: false
           VALIDATE_JSCPD: false
-          FIX_MARKDOWN: false
+          VALIDATE_YAML: false
+          VALIDATE_MARKDOWN: false
       - name: Commit and push linting fixes
         if: >
           github.event_name == 'pull_request' &&
