--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,6 +12,7 @@ jobs:
     permissions:
       contents: write
       statuses: write
+      workflows: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
