--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,7 +25,6 @@ jobs:
           FIX_CSS_PRETTIER: true
           FIX_JAVASCRIPT_PRETTIER: true
           FIX_MARKDOWN_PRETTIER: true
-          FIX_YAML_PRETTIER: true
           VALIDATE_CHECKOV: false
           VALIDATE_HTML: false
           VALIDATE_CSS: false
@@ -34,6 +33,7 @@ jobs:
           VALIDATE_JSCPD: false
           VALIDATE_YAML: false
           VALIDATE_MARKDOWN: false
+          VALIDATE_YAML_PRETTIER: false
       - name: Commit and push linting fixes
         if: >
           github.event_name == 'pull_request' &&
