--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,28 +1,46 @@
+---
 name: Lint
 
 on:
-  push:
-    branches: [ live ]
-  pull_request:
-    branches: [ live ]
+  push: null
+  pull_request: null
+
+permissions:
+  contents: read
 
 jobs:
-  build:
-    name: Lint
+  lint:
+    permissions: write-all
     runs-on: ubuntu-latest
-
-    permissions:
-      contents: read
-      packages: read
-      statuses: write
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
       - name: Super-linter
-        uses: super-linter/super-linter@v6.5.1
+        uses: super-linter/super-linter/slim@v7.3.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          LINTER_RULES_PATH: linters
+          FIX_HTML_PRETTIER: true
+          FIX_CSS_PRETTIER: true
+          FIX_JAVASCRIPT_PRETTIER: true
+          FIX_MARKDOWN_PRETTIER: true
+          VALIDATE_CHECKOV: false
+          VALIDATE_HTML: false
+          VALIDATE_CSS: false
+          VALIDATE_JAVASCRIPT_STANDARD: false
+          VALIDATE_JAVASCRIPT_ES: false
+          VALIDATE_JSCPD: false
+          VALIDATE_YAML: false
+          VALIDATE_MARKDOWN: false
+          VALIDATE_YAML_PRETTIER: false
+      - name: Commit and push linting fixes
+        if: >
+          github.event_name == 'pull_request' &&
+          github.ref_name != github.event.repository.default_branch
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          branch: ${{ github.event.pull_request.head.ref || github.head_ref || github.ref }}
+          commit_message: "chore: fix linting issues"
+          commit_user_name: super-linter
+          commit_user_email: super-linter@super-linter.dev
